applications/webapp/wordcloudapi/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordcloudapi-deployment
  labels:
    app: wordcloudapi
spec:
  replicas: 3
  selector:
    matchLabels:
      app: wordcloudapi
  template:
    metadata:
      labels:
        app: wordcloudapi
    spec:
      containers:
      - name: wordcloudapi
        image: leo310/wordcloudapi
        ports:
        - containerPort: 3001
