applications/webapp/wordcloudapi/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordcloudapi-ingress
  annotations:
    # kubernetes.io/tls-acme: "true"
    # cert-manager.io/cluster-issuer: letsencrypt-issuer
    kubernetes.io/ingress.class: kong
spec:
  # tls:
  # - secretName: webapp-tls-secret
  #   hosts:
  #   - webapp.lhs.world
  rules:
    - host: wordcloudapi.lhs.world
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wordcloudapi-service
                port:
                  number: 3001
